# cmake_lib_x_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
src/include/: funcs.hpp
src/lib/: funcs.cpp
